[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pegasource"
version = "0.1.1"
description = "Offline-capable toolkit: PCAP analysis, geographic functions, and time-series prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Josef Berman" }]
urls = { Documentation = "https://josefberman.github.io/pegasource/", Source = "https://github.com/josefberman/Pegasource" }
keywords = ["pcap", "network", "geo", "timeseries", "israel", "roads"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # PCAP
    "scapy>=2.5",
    # Geo
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "networkx>=3.1",
    "pyproj>=3.6",
    "shapely>=2.0",
    # Time series
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    # Visualisation (optional but included)
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "mkdocs<2",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
pegasource-download-roads = "pegasource.geo.israel_roads:_cli_download"

[tool.setuptools.packages.find]
where = ["."]
include = ["pegasource*"]

[tool.setuptools.package-data]
"pegasource.data" = ["*.graphml.gz", "*.pkl.gz", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
